<resources>
    <string name="app_name">Noted</string>
    <string name="onboarding_description">This is the absolute way to make your notes easier and save the earth as well. Anything will be better</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="ok_noted">ok, Noted</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="by_continuing_you_agree_to_our_terms_conditions_and_privacy_policy">By continuing, you agree to our Terms, Conditions and Privacy Policy</string>
    <string name="_continue">Continue</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_info">We have sent a link to your email \'%1$s\'. Click on the link to reset your password </string>
    <string name="resend">Resend</string>
    <string name="notes">Notes</string>
    <string name="search_your_notes">Search your notes</string>
    <string name="create_new_note">Create new note</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="verification">We have sent a link to verify your email %1$s. Verify to continue</string>
    <string name="getting_your_notes">Getting your notes..</string>
    <string name="you_have_no_notes">You have no notes</string>
    <string name="sort">Sort</string>
    <string name="delete_info">Do you want to discard this note(s)? You won\'t be able to retrieve again</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="note_saved">Note Saved</string>
    <string name="note_updated">Note Updated</string>
    <string name="note_discarded">Empty note discarded</string>
</resources>