<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/delete_dialog_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete_information"
        android:text="@string/delete_info"
        android:gravity="center"
        android:textSize="16sp"
        app:fontFamily="@font/sarabun_semi_bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_button"
        android:text="@string/cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/delete_information"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_button"
        android:text="@string/delete"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/design_default_color_error"
        app:strokeColor="@color/design_default_color_error"
        app:layout_constraintTop_toBottomOf="@id/delete_information"/>

</androidx.constraintlayout.widget.ConstraintLayout>