<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".ui.fragments.OnboardingFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ok_noted"
        android:textColor="@color/purple_700"
        android:textSize="56sp"
        app:fontFamily="@font/sarabun_semi_bold"
        app:layout_constraintBottom_toTopOf="@id/top_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/app_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_guideline"
        app:srcCompat="@drawable/pencil_2317" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/onboarding_description"
        android:textColor="#CE000000"
        android:textSize="18sp"
        app:fontFamily="@font/sarabun_medium"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="12dp"
        android:text="@string/sign_up"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/bottom_guideline" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingEnd="8dp"
        android:text="@string/already_have_an_account"
        android:textSize="16sp"
        app:fontFamily="@font/sarabun_bold"
        app:layout_constraintEnd_toStartOf="@+id/sign_in"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="@string/sign_in"
        android:textColor="#DFB409"
        android:textSize="16sp"
        app:fontFamily="@font/sarabun_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/already_have_an_account"
        app:layout_constraintTop_toTopOf="@id/already_have_an_account" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>