<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragments.NoteWriteFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:fontFamily="@font/sarabun_extra_bold"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@id/delete"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_share_24" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="13sp"
        app:fontFamily="@font/sarabun_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        tools:text="07:35pm" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/note_title_background"
        android:fontFamily="@font/sarabun_medium"
        android:hint="@string/title"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/time"
        tools:text="How to build app" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autoLink="all"
        android:background="@drawable/note_title_background"
        android:fontFamily="@font/sarabun_light"
        android:gravity="top|start"
        android:hint="@string/note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_title"
        tools:text="@tools:sample/lorem/random" />


</androidx.constraintlayout.widget.ConstraintLayout>